--- a/style.css
+++ b/style.css
@@ -7,20 +7,20 @@
         font-weight: bold;
         padding: 20px;
         font-family: Arial, Helvetica, sans-serif;
-        background-color: #b3a997;
+        background-color: #072011;
         overflow: hidden;
 }
 a {
         float: left;
-        color: #343d32;
+        color: #cdebc6;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
         border-radius: 20px;
         font-weight: bold;
-        background-color: #23c483;
-        box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+        background-color: #004b1d;
+        box-shadow: 0px 15px 20px #004b1dc4;
         color: #fff;
     
 }
@@ -33,8 +33,8 @@ a:hover {
       transform: rotateY('90deg');
 }
 .active {
-      background-color: #6f7525;
-      color: white;
+      background-color:#073b1ba6 ;
+      color: 004b1d;
 }
 .container {
       position: relative;
