--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
       background-color: #ffffff;
 }
 
-a {
+.navbar a {
       float: left;
       align-items: center;
       background-color: #ffffff;
