--- a/style.css
+++ b/style.css
@@ -72,7 +72,12 @@ a:hover {
       background-color: #d2c9b6;
       color: black;
 }
+.container2 {
+      
+}
 .container2 p{
       font-family: Arial, Helvetica, sans-serif;
+      text-align: justify;
+      position: relative;
       
 }
