--- a/style.css
+++ b/style.css
@@ -6,17 +6,14 @@ body {
         background-color: #f1f2e6;
         color: #F5EFE6;
         text-align: center;
-        /* font-size: 75px; */
         font-weight: bold;
         padding: 0px;
         font-family: Arial, Helvetica, sans-serif;
-        /* overflow: hidden; */
         display: flex;
         align-items: center;
         justify-content:center;
 }
 .navbar a {
-        /* float: left; */
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
@@ -24,7 +21,6 @@ body {
         border-radius: 0px;
         font-weight: bold;
         background-color: #f1f2e6;
-        /* box-shadow: 0px 15px 20px #004b1dc4; */
         color: #000000;
         margin-left: 10px;
 }
@@ -42,7 +38,6 @@ a:hover {
       position: relative;
       width: 100%;
       height: 640px;
-      /* object-fit: fill; */
 }
 .container_text {
       position:absolute;
@@ -72,12 +67,29 @@ a:hover {
       background-color: #d2c9b6;
       color: black;
 }
-.container2 {
-      
+.info {
+      margin-right:100px;
+      margin-left:100px;
+      width: 85%;
 }
-.container2 p{
+.info img{
+      float: left;
+      border: 3px solid #d2c9b6;
+      border-radius: 10px;
+      margin-top: 10px;
+      margin-right: 15px;
+}
+.text-box h1{
       font-family: Arial, Helvetica, sans-serif;
       text-align: justify;
       position: relative;
-      
+      color: #004b1d;
+      font-size: 40px;
+}
+.text-box p{
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: justify;
+      position: relative;
+      color: #000000;
+      font-size: 15px;
 }
