--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.container3{
+.container_f{
     max-width: 1170px;
     background-color: #adbf8a;
     margin: auto;
