--- a/css/despre_noi.css
+++ b/css/despre_noi.css
@@ -30,32 +30,6 @@ a:hover {
     background-color: #adbf8a;
     color: black;
 }
-/* .info {
-    margin-right:100px;
-    margin-left:100px;
-    width: 85%;
-}
-.info img{
-    float: left;
-    border: 3px solid #d2c9b6;
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-right: 15px;
-}
-.text-box h1{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    position: relative;
-    color: #004b1d;
-    font-size: 40px;
-}
-.text-box p{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    position: relative;
-    color: #000000;
-    font-size: 15px;
-} */
 .container2 {
     position: relative;
 }
@@ -78,4 +52,53 @@ a:hover {
     text-align: center;
     color: #004b1d;
     font-size: 50px;
+}
+
+
+.container3 {
+    position: relative;
+}
+.info {
+    margin-right:100px;
+    margin-left:100px;
+    width: 85%;
+}
+.info img{
+    /* height: 250px;
+    width: 450px; */
+    float: left;
+    /* border: 3px solid #d2c9b6;
+    border-radius: 10px; */
+    margin-top: 10px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+}
+.text-box2 p{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    position: relative;
+    color: #000000;
+    font-size: 20px;
+}
+.text-box2 h1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    position: relative;
+    color: #004b1d;
+    font-size: 32px;
+}
+.info2 {
+    margin-right:100px;
+    margin-left:100px;
+    width: 85%;
+}
+.info2 img{ 
+    /* height: 250px;
+    width: 450px; */
+    float: right;
+    /* border: 3px solid #d2c9b6; */
+    /* border-radius: 10px; */
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 10px;
 }
