--- a/css/plantele_mele.css
+++ b/css/plantele_mele.css
@@ -92,7 +92,7 @@
   margin: 14px;
   background-color: #7A8054;
   border-radius: 100px;
-  box-shadow: #4e5235 0 -25px 18px -14px inset, #4e5235 0 1px 2px, #4e5235 0 2px 4px, #4e5235 0 4px 8px, #4e5235 0 8px 16px, #4e5235 0 16px 32px;
+  /* box-shadow: #4e5235 0 -25px 18px -14px inset, #4e5235 0 1px 2px, #4e5235 0 2px 4px, #4e5235 0 4px 8px; */
   color: #f0f0f0;
   cursor: pointer;
   display: inline-block;
@@ -108,7 +108,7 @@
   touch-action: manipulation;
 }
 .button:hover {
-  box-shadow: #4e5235 0 -25px 18px -14px inset, #4e5235 0 1px 2px, #4e5235 0 2px 4px, #4e5235 0 4px 8px, #4e5235 0 8px 16px, #4e5235 0 16px 32px;
+  box-shadow: #4e5235 0 -25px 18px -14px inset, #4e5235 0 1px 2px, #4e5235 0 2px 4px, #4e5235 0 4px 8px;
   transform: scale(1.05) rotate(-1deg);
 }
 .swiper-navBtn{
@@ -139,21 +139,15 @@
 }
 
 <!---------------------------------FORM---------------------------------------------->
-.column {
-  display: flex;
-  column-gap: 15px;
-
-}
 .container {
   justify-content: center;
-  position: relative;
-  max-width: 700px;
-  width: 50%;
-  background: #fff;
+  position: absolute;
+  margin: auto;
+  width: 70%;
+  background: #f0f0f0;
   padding: 25px;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); 
-  
 }
 .container header {
   font-size: 1.5rem;
@@ -164,9 +158,10 @@
 .container .form {
   margin-top: 30px;
 }
-.form .input-box {
-  width: 100%;
+.form {
+  width: 50%;
   margin-top: 20px;
+  margin-left: 25%;
 }
 .input-box label {
   color: #333;
@@ -206,7 +201,7 @@
   column-gap: 5px;
 }
 .gender input {
-  accent-color: rgb(130, 106, 251);
+  accent-color: #7A8054;
 }
 .form :where(.gender input, .gender label) {
   cursor: pointer;
@@ -232,10 +227,10 @@
   border: none;
   cursor: pointer;
   transition: all 0.2s ease;
-  background: rgb(130, 106, 251);
+  background: #7A8054;
 }
 .form button:hover {
-  background: rgb(88, 56, 250);
+  background: #4e5235;
 }
 /*Responsive*/
 @media screen and (max-width: 500px) {
