--- a/css/plantele_mele.css
+++ b/css/plantele_mele.css
@@ -1,13 +1,15 @@
- body{
+ /* body{
   margin: 0;
   min-height: 100vh;
   display:block; 
   align-items: center;
   justify-content: center;
-  background-color: #f0f0f0;
-} 
+  background-color: #f0f0f0; 
+  }
+  */
+
 <!-------------------------------PLANT-SLIDER------------------------------------------------>
-*{
+* {
   margin: 0;
   padding: 0; 
   box-sizing: border-box;
@@ -18,6 +20,7 @@
   max-width: 1120px;
   width: 100%;
   padding: 40px 0;
+  margin-bottom: 80px;
 }
 .slide-content{
   margin: 0 40px;
@@ -28,8 +31,7 @@
   border-radius: 25px;
   background-color: #f0f0f0;
 }
-.image-content,
-.card-content{
+.image-content, .card-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,7 +94,6 @@
   margin: 14px;
   background-color: #7A8054;
   border-radius: 100px;
-  /* box-shadow: #4e5235 0 -25px 18px -14px inset, #4e5235 0 1px 2px, #4e5235 0 2px 4px, #4e5235 0 4px 8px; */
   color: #f0f0f0;
   cursor: pointer;
   display: inline-block;
@@ -137,31 +138,67 @@
     display: none;
   }
 }
+/* ---------------------------------container----------------------------------------------> */
+.text_section {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  display: block;
 
-<!---------------------------------FORM---------------------------------------------->
-.container {
+}
+
+.container img {
+  object-fit: contain;
+}
+.overlay_c {
+  position: absolute;
+  height: 100%;
+  width: 38%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #cfcdb5
+}
+.container:hover .overlay_c {
+  opacity: 1;
+}
+
+.text {
+  color: rgb(253, 246, 246);
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+*/ <!---------------------------------FORM----------------------------------------------> */
+.container_form {
   justify-content: center;
   position: absolute;
-  margin: auto;
+  margin:auto;
   width: 70%;
   background: #f0f0f0;
   padding: 25px;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); 
 }
-.container header {
+.container_form header {
   font-size: 1.5rem;
   color: #333;
   font-weight: 500;
   text-align: center;
 }
-.container .form {
+.container_form .form {
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 .form {
-  width: 50%;
+  width: 30%;
   margin-top: 20px;
-  margin-left: 25%;
+  margin-left: 35%;
 }
 .input-box label {
   color: #333;
