--- a/css/despre_noi.css
+++ b/css/despre_noi.css
@@ -54,51 +54,104 @@ a:hover {
     font-size: 50px;
 }
 
-
 .container3 {
     position: relative;
 }
-.info {
-    margin-right:100px;
-    margin-left:100px;
-    width: 85%;
-}
-.info img{
-    /* height: 250px;
-    width: 450px; */
-    float: left;
-    /* border: 3px solid #d2c9b6;
-    border-radius: 10px; */
-    margin-top: 10px;
-    margin-right: 15px;
-    margin-bottom: 10px;
-}
-.text-box2 p{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
+
+* {box-sizing:border-box}
+
+.slideshow-container {
     position: relative;
-    color: #000000;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.mySlides {
+    display: none;
+    padding: 0px;
+}
+
+.mySlides img {
+    width: 2000px;
+    height: 500px;
+    object-fit: cover;
+  }
+
+.active {
+    display: block;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #888;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.prev {
+    position: absolute;
+    left: 0;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(222, 247, 224, 0.8);
+    color: white;
+}
+
+.dot-container {
+    text-align: center;
+    padding: 20px;
+    background: #ddd;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.text-box2 p{
+    position: absolute;
+    bottom: 300px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    position: relative;
+    color: #dddddd;
     font-size: 20px;
 }
+
 .text-box2 h1{
+    position: absolute;
+    bottom: 350px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
+    text-align: center;
     position: relative;
-    color: #004b1d;
+    color: #dddddd;
     font-size: 32px;
-}
-.info2 {
-    margin-right:100px;
-    margin-left:100px;
-    width: 85%;
-}
-.info2 img{ 
-    /* height: 250px;
-    width: 450px; */
-    float: right;
-    /* border: 3px solid #d2c9b6; */
-    /* border-radius: 10px; */
-    margin-top: 10px;
-    margin-left: 15px;
-    margin-bottom: 10px;
 }
